--- a/examples/answers.html
+++ b/examples/answers.html
@@ -5,13 +5,15 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>demo</title>
-        <link rel="stylesheet" href="styles/styles.css">
+        <link href='http://fonts.googleapis.com/css?family=ABeeZee' rel='stylesheet' type='text/css'>
+        <link rel="stylesheet" href="../stylesheets/screen.css">
+
     </head>
 
     <body id="home">
-
+        <div id="svg-cont"></div>
         <div id="main">
-            <h1>main</h1>
+            <div id="questions-cont"></div>
         </div><!--/#main-->
 
         <script src="../lib/jquery/jquery1.8.0-min.js"></script>
